--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: Grayscale
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: stefantrauth.de
+email: mail@stefantrauth.de
+url: https://stefantrauth.de
+description: "Coder, Blogger, Podcaster"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary-dark: '#000000'
+  primary-dark: '#222222'
   links: '#219ab3'
 
 # Footer settings
@@ -15,15 +15,9 @@ footer: Your Website
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://twitter.com/funkenstrahlen
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+    url: https://github.com/funkenstrahlen
 
 # Build settings
 markdown: kramdown
