--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: stefantrauth.de
-email: mail@stefantrauth.de
+email: 
 url: https://stefantrauth.de
 description: "Coder, Blogger, Podcaster"
 
